Fix spacing

--- a/index.css
+++ b/index.css
@@ -112,7 +112,8 @@ navbar-nav {
 }
 
 #ourstory img {
-  border-radius: 10px;
+  border-radius: 20px;
+  padding-top: 30px;
 }
 
 /* WHEN & WHERE */
